fix theme button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,7 @@ h2 {
   }
 
   .themeToggle {
+    top: 56px;
     left: 16px;
   }
 
